[package]
name = "ping"
version = "0.1.0"
authors = ["Hyun Seungmin <boscohyun@gmail.com>"]
edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
